compiler/testData/cli/jvm/unsupportedTypeAlias.kt
package test

typealias Unused = String